Form without validation (yet)

--- a/Form/war/Form.html
+++ b/Form/war/Form.html
@@ -1,26 +1,15 @@
+<!DOCTYPE html>
 <html>
-<head>
-
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
-
+<head lang="en">
+    <meta charset="UTF-8">
     <title>Test Form</title>
 
     <link type="text/css" rel="stylesheet" href="gwt.css">
-
-    <!--                                            -->
-    <!-- This script is required bootstrap stuff.   -->
-    <!--                                            -->
     <script type="text/javascript" language="javascript" src="gwt/gwt.nocache.js"></script>
-</head>
 
-<!--                                           -->
-<!-- The body can have arbitrary html, or      -->
-<!-- you can leave the body empty if you want  -->
-<!-- to create a completely dynamic ui         -->
-<!--                                           -->
+</head>
 <body>
-<div id="submitForm"/>
+
 </body>
 </html>
+
